ajout des fichiers

--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <html lang="fr">
     <title>Plateforme reservia</title>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1,0">
+    <script src="https://kit.fontawesome.com/d6a4586d29.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+</head>
 <body>
     <header>
+        <div id="logo">
+            <img src="projet2/images/logo/Reservia@3x.png" alt="logo de reservia">
+        </div>
         <nav>
             <ul>
-                <li>Hébergements</li>
-                <li>Activités</li>
-                <li>S'inscrire</li>
+                <li><a href="#">Hébergements</a></li>
+                <li><a href="#">Activités</a></li>
+                <li><a href="#">S'inscrire</a></li>
             </ul>
         </nav>
     </header>
-    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-    <h5>En plein centre ville ou en plaine nature</h5>
+    <div>
+        <div id="corps_de_la_page">
+            <p><h1>Trouvez votre hébergement pour des vacances de rêve</h1></p>
+            <p><h5>En plein centre ville ou en plaine nature</h5></p>
+            <form method="POST">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <input type="search" placeholder="Marseille, France"/>
+                    <input type="button" value="Recherche">
+            </form>
+
+
+
+        </div>
+
+    </div>
+    
 
     <footer>
 
     </footer>
 </body>
-</head>
 </html>
