second code clean

--- a/reservia/index.html
+++ b/reservia/index.html
@@ -11,22 +11,27 @@
 </head>
 <body>
     <header>
-        <div >
+        <div>
             <a href="#">
-                <img class="logo" src="projet2/images/logo/Reservia@3x.png" alt="logo de reservia">
+                <img id="logo" src="projet2/images/logo/Reservia@3x.png" alt="logo de reservia">
             </a>       
         </div>
-        <nav>
-            <ul class="menu">
-                <li class="effet"><a class="lien" href="#">Hébergements</a></li>
-                <li class="effet"><a class="lien" href="#">Activités</a></li>
-                <li><a class="lien2" href="#">S'inscrire</a></li>
-            </ul>
-        </nav>
+        <div id="menu">
+            <div class="menu">
+                <a class="lien" href="#">Hébergements</a>
+           </div>
+           <div class="menu">
+               <a class="lien" href="#">Activités</a>
+           </div>
+           <div>
+               <a class="lien2" href="#">S'inscrire</a>
+           </div>
+        </div>
+
     </header>
         <div>
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-            <h5 class="centreville">En plein centre ville ou en plaine nature</h5>
+            <p class="centreville">En plein centre ville ou en plaine nature</p>
             <form method="POST">
                 <div class="espaceRecherche">
                     <div>
@@ -298,33 +303,33 @@
     <!-- pied de page -->
 
     <footer>
-        <div class="block1">
+        <div>
             <h4>A propos</h4>
             <nav>
                 <ul>
-                    <li><a href="#">Fonctionnement du site</a></li>
-                    <li><a href="#">condition générales de vente</a></li>
-                    <li><a href="#">Données et confidentialité</a></li>
+                    <a href="#">Fonctionnement du site</a>
+                    <a href="#">condition générales de vente</a>
+                    <a href="#">Données et confidentialité</a>
                 </ul>
             </nav>
 
         </div>
-        <div class="block2">
+        <div class="bloc">
             <h4>Nos Hébergements</h4>
             <nav>
                 <ul>
-                    <li><a href="#">Charte qualité</a></li>
-                    <li><a href="#">Soumettre votre hôtel</a></li>
+                    <a href="#">Charte qualité</a>
+                    <a href="#">Soumettre votre hôtel</a>
                 </ul>
             </nav>
 
         </div>
-        <div class="block3">
+        <div class="bloc">
             <h4>Assistance</h4>
             <nav>
                 <ul>
-                    <li><a href="#">Centre d'aide</a></li>
-                    <li><a href="#">Nous contacter</a></li>
+                    <a href="#">Centre d'aide</a>
+                    <a href="#">Nous contacter</a>
                 </ul>
             </nav>
         </div>
