les versions tablette

--- a/reservia/index.html
+++ b/reservia/index.html
@@ -109,8 +109,8 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
                                     <i class="fas fa-star item"></i>
-                                    <i class="fas fa-star" style="color: #ebe6e6;"></i>
                             </figcaption>
                         </figure>
                         <figure class="paver">
@@ -138,7 +138,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: #ebe6e6;"></i>
+                                <i class="fas fa-star item"></i>
                             </figcaption>
                         </figure>
                     </div>
@@ -153,8 +153,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: #ebe6e6;"></i>
-                                <i class="fas fa-star" style="color: #ebe6e6;"></i>
+                                <i class="fas fa-star item"></i>
+                                <i class="fas fa-star item"></i>
                             </figcaption>
                         </figure>
                         <figure class="paver">
@@ -182,7 +182,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: #ebe6e6;"></i>
+                                <i class="fas fa-star item"></i>
                             </figcaption>
                         </figure>
                     </div>
@@ -220,7 +220,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star item"></i>
                         </figcaption>
                     </figure>
                     <figure class="paver2" >
@@ -234,7 +234,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star item"></i>
                         </figcaption>
                     </figure>
                 </div>
