amelioration du code

--- a/reservia/index.html
+++ b/reservia/index.html
@@ -14,7 +14,10 @@
         <div>
             <a href="#">
                 <img id="logo" src="projet2/images/logo/Reservia@3x.png" alt="logo de reservia">
-            </a>       
+            </a> 
+            <div id="mobile">
+                <a class="lien3" href="#"> S'inscrire</a>
+            </div>      
         </div>
         <div id="menu">
             <div class="menu">
@@ -23,7 +26,7 @@
            <div class="menu">
                <a class="lien" href="#">Activités</a>
            </div>
-           <div>
+           <div id="inscription">
                <a class="lien2" href="#">S'inscrire</a>
            </div>
         </div>
@@ -41,54 +44,30 @@
                         <input class="search" type="search" placeholder="Marseille, France"/>
                     </div>
                     <div>
-                        <input class="bouton" type="button" value="Recherche"/>
+                        <input class="bouton" type="button" value="Recherche"/><i class="fas fa-search"></i>
                     </div>                   
                 </div>
             </form>
             <div class="blocdiv" >
                 <div>
-                    <nav>
-                        <ul class="filtre">
-                            <li class="fi"> Filtre</li>
-                        </ul>
-                    </nav>
+                    <li class=rt>Filtre</li>
+                </div>
+                <div>       
+                   <li class="rt"><a href="#" class="ut"><i class="fas fa-money-bill-wave icone"></i>Économique</a></li>
                 </div>
                 <div>
-                    <nav>
-                        <ul class="margeul">          
-                            <li class="log"><a href="#" class="ut"><i class="fas fa-money-bill-wave"></i>Économique</a></li>
-                        </ul>
-                    </nav>
+                    <li class="rt"><a href="#" class="ut"><i class="fas fa-child icone" ></i>Famillial</a></li>
                 </div>
                 <div>
-                    <nav>
-                        <ul class="margeul">
-                            <li class="log"><a href="#" class="ut"><i class="fas fa-child" ></i>Famillial</a></li>
-                        </ul>
-                    </nav>
+                    <li class="rt"><a href="#" class="ut"><i class="fas fa-heart icone" ></i>Romantique</a></li>
                 </div>
                 <div>
-                    <nav>
-                        <ul class="margeul">
-                            <li class="log"><a href="#" class="ut"><i class="fas fa-heart" ></i>Romantique</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div>
-                    <nav>
-                        <ul class="margeul">
-                            <li class="log"><a href="#" class="ut"><i class="fas fa-dog" ></i>Animaux autorisés</a></li>
-                        </ul>
-                    </nav>
+                    <li class="rt"><a href="#" class="ut"><i class="fas fa-dog icone" ></i>Animaux autorisés</a></li>
                 </div>
             </div>
             <div class="logtexte">
-                <div>
                     <i class="fas fa-info"></i>
-                </div>
-                <div class="p500">
                     Plus de 500 logements sont disponibles dans cette ville
-                </div>
             </div>
         </div>
 
@@ -197,7 +176,7 @@
                 <div class="mvp">
                     <figure class="paver2" >
                         <a href="#">
-                            <img class="image2" src="projet2/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt=" Hôtel Le soleil du matin">
+                            <img class="image2" src="projet2/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt=" Hôtel Le soleil du matin">
                         </a>
                         <figcaption>
                             <h3>Hôtel Le soleil du matin</h3>
@@ -211,7 +190,7 @@
                     </figure>
                     <figure class="paver2" >
                         <a href="#">
-                            <img class="image2" src="projet2/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=" Au coeuur de l'eau Chambres d'hôtes">
+                            <img class="image2" src="projet2/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=" Au coeuur de l'eau Chambres d'hôtes">
                         </a>
                         <figcaption>
                             <h3>Au coeuur de l'eau Chambres d'hôtes</h3>
@@ -225,7 +204,7 @@
                     </figure>
                     <figure class="paver2" >
                         <a href="#">
-                            <img class="image2" src="projet2/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt=" Hôtel Tout bleu et Blanc">
+                            <img class="image2" src="projet2/images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt=" Hôtel Tout bleu et Blanc">
                         </a>
                         <figcaption>
                             <h3>Hôtel Tout bleu et blanc</h3>
@@ -257,13 +236,13 @@
             <div class="horizontal">
                 <figure class="verti">
                     <a href="#">
-                        <img class="img4" src="projet2/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=" Fort de Pomègues">
+                        <img class="img5" src="projet2/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=" Fort de Pomègues">
                     </a>
                     <figcaption>
                         <h4>Fort de Pomègues</h4>
                     </figcaption>
                 </figure>
-                <figure class="verti" id="">
+                <figure class="verti">
                     <a href="#">
                         <img class="img4" src="projet2/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=" Île du Frioul">
                     </a>
