modification du bloc hebergement a mq pwd

--- a/reservia/index.html
+++ b/reservia/index.html
@@ -21,10 +21,10 @@
         </div>
         <div id="menu">
             <div class="menu">
-                <a class="lien" href="#">Hébergements</a>
+                <a class="lien" href="#hebergements">Hébergements</a>
            </div>
            <div class="menu">
-               <a class="lien" href="#">Activités</a>
+               <a class="lien" href="#activites">Activités</a>
            </div>
            <div id="inscription">
                <a class="lien2" href="#">S'inscrire</a>
@@ -74,7 +74,7 @@
 <!-- Hébergement à Marseille -->
     
         <div class="grosbloc">
-            <section class="section1">
+            <section class="section1" id="hebergements">
                 <h2>Hébergements à Marseille </h2>
                 <div class="hébergements">
                     <div class="deuxieme">
@@ -222,10 +222,10 @@
 
  <!-- activités à Marseille -->
 
-        <h3 class="acmar">Activités à Marseille</h3>
+        <h3 class="acmar" id="activites">Activités à Marseille</h3>
         <section class="activites">
            
-            <figure class="vertical">
+            <figure class="vertical" id="a">
                 <a href="#">
                     <img class="img3" src="projet2/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=" Vieux Port">
                 </a>
@@ -234,7 +234,7 @@
                 </figcaption>
             </figure>
             <div class="horizontal">
-                <figure class="verti">
+                <figure class="verti b" id="b">
                     <a href="#">
                         <img class="img5" src="projet2/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=" Fort de Pomègues">
                     </a>
@@ -242,7 +242,7 @@
                         <h4>Fort de Pomègues</h4>
                     </figcaption>
                 </figure>
-                <figure class="verti">
+                <figure class="verti" id="c">
                     <a href="#">
                         <img class="img4" src="projet2/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=" Île du Frioul">
                     </a>
@@ -251,7 +251,7 @@
                     </figcaption>
                 </figure>
             </div> 
-            <figure class="vertical">
+            <figure class="vertical" id="d">
                 <a href="#">
                     <img class="img3" src="projet2/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt=" Parc National des Calanques">
                 </a>
@@ -260,7 +260,7 @@
                 </figcaption>
             </figure>
             <div class="horizontal">
-            <figure class="verti">
+            <figure class="verti" id="e">
                 <a href="#">
                     <img class="img4" src="projet2/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt=" Notre-Dame-de-la-Garde">
                 </a> 
@@ -268,7 +268,7 @@
                     <h4>Notre-Dame-de-la-Garde</h4>
                 </figcaption>
             </figure>
-            <figure class="verti">
+            <figure class="verti" id="f">
                 <a href="#">
                     <img class="img4" src="projet2/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt=" Parc Longchamp">
                 </a>
