code clean and finsh

--- a/reservia/index.html
+++ b/reservia/index.html
@@ -50,20 +50,24 @@
             </form>
             <div class="blocdiv" >
                 <div>
-                    <li class=rt>Filtre</li>
+                    <p class="element1">Filtre</p>
                 </div>
-                <div>       
-                   <li class="rt"><a href="#" class="ut"><i class="fas fa-money-bill-wave icone"></i>Économique</a></li>
+
+                <div id="filtre">
+                    <div class="box">       
+                        <a href="#" class="ut"><i class="fas fa-money-bill-wave icone"></i>Économique</a>
+                     </div>
+                     <div class="box">
+                         <a href="#" class="ut"><i class="fas fa-child icone" ></i>Famillial</a>
+                     </div>
+                     <div class="box">
+                         <a href="#" class="ut"><i class="fas fa-heart icone" ></i>Romantique</a>
+                     </div>
+                     <div class="box">
+                         <a href="#" class="ut"><i class="fas fa-dog icone" ></i>Animaux autorisés</a>
+                     </div>
                 </div>
-                <div>
-                    <li class="rt"><a href="#" class="ut"><i class="fas fa-child icone" ></i>Famillial</a></li>
-                </div>
-                <div>
-                    <li class="rt"><a href="#" class="ut"><i class="fas fa-heart icone" ></i>Romantique</a></li>
-                </div>
-                <div>
-                    <li class="rt"><a href="#" class="ut"><i class="fas fa-dog icone" ></i>Animaux autorisés</a></li>
-                </div>
+
             </div>
             <div class="logtexte">
                     <i class="fas fa-info"></i>
@@ -193,7 +197,7 @@
                             <img class="image2" src="projet2/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=" Au coeuur de l'eau Chambres d'hôtes">
                         </a>
                         <figcaption>
-                            <h3>Au coeuur de l'eau Chambres d'hôtes</h3>
+                            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <h5 class="prix">Nuit à partir de 71€</h5>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -285,31 +289,25 @@
         <div>
             <h4>A propos</h4>
             <nav>
-                <ul>
                     <a href="#">Fonctionnement du site</a>
                     <a href="#">condition générales de vente</a>
                     <a href="#">Données et confidentialité</a>
-                </ul>
             </nav>
 
         </div>
         <div class="bloc">
             <h4>Nos Hébergements</h4>
             <nav>
-                <ul>
                     <a href="#">Charte qualité</a>
                     <a href="#">Soumettre votre hôtel</a>
-                </ul>
             </nav>
 
         </div>
         <div class="bloc">
             <h4>Assistance</h4>
             <nav>
-                <ul>
                     <a href="#">Centre d'aide</a>
                     <a href="#">Nous contacter</a>
-                </ul>
             </nav>
         </div>
     </footer>
