correction de l'alignement et des images

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 <body>
     <header>
-        <div>
-            <a href="#">
-                <img id="logo" src="projet2/images/logo/Reservia@3x.png" alt="logo de reservia"/>
-            </a> 
-            <div id="mobile">
+        <div id="mobilis">
+            <div>
+                <a href="#">
+                    <img id="logo" src="Projet2/images/logo/Reservia@3x.png" alt="logo de reservia"/>
+                </a>
+            </div>
+            <div class="headblock">
                 <a class="lien3" href="#"> S'inscrire</a>
             </div>      
         </div>
@@ -227,7 +229,7 @@
 
  <!-- activités à Marseille -->
 
-        <h3 class="acmar" id="activites">Activités à Marseille</h3>
+        <h2 class="acmar" id="activites">Activités à Marseille</h2>
         <section class="activites">
            
             <figure class="vertical" id="a">
@@ -287,7 +289,7 @@
     <!-- pied de page -->
 
     <footer>
-        <div>
+        <div class="foot">
             <h4>A propos</h4>
             <nav>
                     <a href="#">Fonctionnement du site</a>
